# remote-monitor

./: snapcraft.yaml
src/: CMakeLists.txt  remote_monitoring.c
